--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        background-color: #eeeeee;
+        background-color: #ffffff;
         color: white;
       }
       @keyframes fadeInUp {
