--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
 <script type="text/javascript">
   //digite a url de redirect
-  var url_link_redirect_pc = "https://www.vipleiloes.com.br/";
+  var url_link_redirect_pc = "https://g1.globo.com/economia/noticia/2026/01/19/banco-master-fgc-comecou-ressarcimentos-nesta-segunda-saiba-como-reaver-seu-dinheiro.ghtml";
 
   //function js
   function isMobile() {
@@ -30,7 +30,7 @@
           sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
-        background-color: #ffffff;
+        background-color: #0f172a; /* slate-900 */
         color: white;
       }
       @keyframes fadeInUp {
